# light-duoattention

./: README.md  setup.py
benchmarks/: __init__.py  bench_attention.py
light_duo_attn/: __init__.py  duo_attn.py
light_duo_attn/kernels/: __init__.py  block_info.py  flash_fwd.py  flash_fwd_sm90.py  flash_streaming_fwd_sm90.py  mask.py  pack_gqa.py  pyproject.toml  softmax.py  streaming_sparse_attention_interface.py  tile_scheduler.py
tests/: streaming_attention_ref.py  test_streaming_attention.py
